// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form constructor matches snapshot: xx 1`] = `
Form {
  "$active": false,
  "_onsubmit": Array [
    [Function],
  ],
  "fields": Object {
    "x1": Field {
      "_type": undefined,
      "default": undefined,
      "key": "x1",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x2": Field {
      "_index": true,
      "_type": undefined,
      "default": undefined,
      "key": "x2",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
    "x3": Field {
      "_type": "number",
      "default": undefined,
      "key": "x3",
      "preview": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "x4": Field {
      "_type": undefined,
      "default": undefined,
      "key": "x4",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x5": Field {
      "_type": undefined,
      "default": undefined,
      "key": "x5",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
  },
  "name": "xx",
  "opts": undefined,
  "plural": "xxi",
  "schema": Schema {
    "indexes": Array [
      "x2",
    ],
    "name": "xx",
    "properties": Object {
      "x1": Object {
        "key": "x1",
        "type": "string",
      },
      "x2": Object {
        "_index": true,
        "key": "x2",
        "type": "string",
      },
      "x3": Object {
        "_type": "number",
        "key": "x3",
        "type": "number",
      },
      "x4": Object {
        "key": "x4",
        "type": "string",
      },
      "x5": Object {
        "key": "x5",
        "type": "string",
      },
    },
    "required": Array [
      "x2",
      "x5",
    ],
    "type": "object",
    "version": 0,
  },
}
`;

exports[`Form options .captureTimestamp matches snapshot: options.captureTimestamp 1`] = `
Form {
  "$active": false,
  "_onsubmit": Array [
    [Function],
  ],
  "fields": Object {
    "createdAt": Field {
      "_index": true,
      "_type": "dateTime",
      "default": undefined,
      "preview": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "updatedAt": Field {
      "_index": true,
      "_type": "dateTime",
      "default": undefined,
      "preview": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "x1": Field {
      "_type": undefined,
      "default": undefined,
      "key": "x1",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x2": Field {
      "_index": true,
      "_type": undefined,
      "default": undefined,
      "key": "x2",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
    "x3": Field {
      "_type": "number",
      "default": undefined,
      "key": "x3",
      "preview": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "x4": Field {
      "_type": undefined,
      "default": undefined,
      "key": "x4",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x5": Field {
      "_type": undefined,
      "default": undefined,
      "key": "x5",
      "preview": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
  },
  "name": "xx",
  "opts": Object {
    "captureTimestamp": true,
  },
  "plural": "xxi",
  "schema": Schema {
    "indexes": Array [
      "x2",
      "createdAt",
      "updatedAt",
    ],
    "name": "xx",
    "properties": Object {
      "createdAt": Object {
        "_index": true,
        "_type": "dateTime",
        "type": "number",
      },
      "updatedAt": Object {
        "_index": true,
        "_type": "dateTime",
        "type": "number",
      },
      "x1": Object {
        "key": "x1",
        "type": "string",
      },
      "x2": Object {
        "_index": true,
        "key": "x2",
        "type": "string",
      },
      "x3": Object {
        "_type": "number",
        "key": "x3",
        "type": "number",
      },
      "x4": Object {
        "key": "x4",
        "type": "string",
      },
      "x5": Object {
        "key": "x5",
        "type": "string",
      },
    },
    "required": Array [
      "x2",
      "x5",
    ],
    "type": "object",
    "version": 0,
  },
}
`;
